FenicsPDE/MOND/jupyternbs/dolfin_reports/jitfailure-dolfin_expression_a3e1fbbd122059fbaeb75a2df8e67cad/error.log
/tmp/tmp2owyl2yn/dolfin_expression_a3e1fbbd122059fbaeb75a2df8e67cad.cpp: In member function ‘virtual void dolfin::dolfin_expression_a3e1fbbd122059fbaeb75a2df8e67cad::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp2owyl2yn/dolfin_expression_a3e1fbbd122059fbaeb75a2df8e67cad.cpp:61:55: error: ‘radius_tot’ was not declared in this scope
           values[0] = pow(x[0],2) + pow(x[1],2) - pow(radius_tot, 2)>=0 ? 4*pi*G*mgb/volume_out : 0;
                                                       ^~~~~~~~~~
/tmp/tmp2owyl2yn/dolfin_expression_a3e1fbbd122059fbaeb75a2df8e67cad.cpp:61:80: error: ‘G’ was not declared in this scope
           values[0] = pow(x[0],2) + pow(x[1],2) - pow(radius_tot, 2)>=0 ? 4*pi*G*mgb/volume_out : 0;
                                                                                ^
/tmp/tmp2owyl2yn/dolfin_expression_a3e1fbbd122059fbaeb75a2df8e67cad.cpp:61:82: error: ‘mgb’ was not declared in this scope
           values[0] = pow(x[0],2) + pow(x[1],2) - pow(radius_tot, 2)>=0 ? 4*pi*G*mgb/volume_out : 0;
                                                                                  ^~~
/tmp/tmp2owyl2yn/dolfin_expression_a3e1fbbd122059fbaeb75a2df8e67cad.cpp:61:82: note: suggested alternative: ‘logb’
           values[0] = pow(x[0],2) + pow(x[1],2) - pow(radius_tot, 2)>=0 ? 4*pi*G*mgb/volume_out : 0;
                                                                                  ^~~
                                                                                  logb
/tmp/tmp2owyl2yn/dolfin_expression_a3e1fbbd122059fbaeb75a2df8e67cad.cpp:61:86: error: ‘volume_out’ was not declared in this scope
           values[0] = pow(x[0],2) + pow(x[1],2) - pow(radius_tot, 2)>=0 ? 4*pi*G*mgb/volume_out : 0;
                                                                                      ^~~~~~~~~~
